Fixed header that doesn't really work on mobile

--- a/src/stylesheets/shared.css
+++ b/src/stylesheets/shared.css
@@ -12,6 +12,10 @@
   width: 1px;
 }
 
+.fixed {
+  position: fixed !important;
+}
+
 :global {
   a {
     color: blue;
